# mv_dupes

./: LICENSE  README.md  pyproject.toml
src/mv_dupes/: main.py
